add breakpoints for adaptive design

--- a/index.html
+++ b/index.html
@@ -93,14 +93,29 @@
               <div class="composition">
                 <img
                   src="img/photo-balloons-1.png"
+                  srcset="
+                    img/photo-balloons-1.png       954w,
+                    img/photo-balloons-1-small.png 318w
+                  "
+                  sizes="(max-width: 1240px) 25vw, (max-width: 900px) 48vw, (max-width: 600px) 45vw, 310px"
                   alt="Photo-balloons-1"
                   class="composition__photo composition__photo_n1"
                 /><img
                   src="img/photo-balloons-2.png"
+                  srcset="
+                    img/photo-balloons-2.png       954w,
+                    img/photo-balloons-2-small.png 318w
+                  "
+                  sizes="(max-width: 1240px) 25vw, (max-width: 900px) 48vw, (max-width: 600px) 45vw, 310px"
                   alt="Photo-balloons-2"
                   class="composition__photo composition__photo_n2"
                 /><img
                   src="img/photo-balloons-3.png"
+                  srcset="
+                    img/photo-balloons-3.png       954w,
+                    img/photo-balloons-3-small.png 318w
+                  "
+                  sizes="(max-width: 1240px) 25vw, (max-width: 900px) 48vw, (max-width: 600px) 45vw, 310px"
                   alt="Photo-balloons-3"
                   class="composition__photo composition__photo_n3"
                 />
@@ -117,8 +132,8 @@
                 ></i>
                 <h3 class="title-third margin-bottom-10">Пригода</h3>
                 <p class="paragraph">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Ratione architecto assumenda deleniti. Perferendis.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Beatae excepturi suscipit eos commodi!
                 </p>
               </div>
             </div>
@@ -130,7 +145,7 @@
                 <h3 class="title-third margin-bottom-10">Пригода</h3>
                 <p class="paragraph">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Obcaecati, repellendus aperiam! Vel, quo!
+                  Beatae excepturi suscipit eos commodi!
                 </p>
               </div>
             </div>
@@ -154,7 +169,7 @@
                 <h3 class="title-third margin-bottom-10">Пригода</h3>
                 <p class="paragraph">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Laborum, rerum sunt. Laudantium, placeat!
+                  Beatae excepturi suscipit eos commodi!
                 </p>
               </div>
             </div>
@@ -194,7 +209,7 @@
                       Повна вартість:
                     </p>
                     <p class="tours-card__text tours-card__text_2">5990₴</p>
-                    <a href="#" class="btn btn_animated">Забронювати</a>
+                    <a href="#" class="btn btn_animated">Обрати</a>
                   </div>
                 </div>
               </div>
@@ -228,7 +243,7 @@
                       Повна вартість:
                     </p>
                     <p class="tours-card__text tours-card__text_2">5990₴</p>
-                    <a href="#" class="btn btn_animated">Забронювати</a>
+                    <a href="#" class="btn btn_animated">Обрати</a>
                   </div>
                 </div>
               </div>
@@ -262,7 +277,7 @@
                       Повна вартість:
                     </p>
                     <p class="tours-card__text tours-card__text_2">5990₴</p>
-                    <a href="#" class="btn btn_animated">Забронювати</a>
+                    <a href="#" class="btn btn_animated">Обрати</a>
                   </div>
                 </div>
               </div>
@@ -286,7 +301,15 @@
           <div class="row">
             <div class="feedback-card">
               <figure class="feedback-card__img">
-                <img src="img/feedback-1.jpg" alt="Photo of a male client" />
+                <img
+                  src="img/feedback-1.jpg"
+                  srcset="
+                    img/feedback-1.jpg       334w,
+                    img/feedback-1-small.jpg 167w
+                  "
+                  sizes="(max-width: 1240px) 20vw, (max-width: 900px) 27vw, (max-width: 600px) 30vw, 204px"
+                  alt="Photo of a male client"
+                />
                 <figcaption class="feedback-card__name">Антон Рябін</figcaption>
               </figure>
               <div class="feedback-card__box">
@@ -294,10 +317,10 @@
                   Я отримав масу вражень
                 </h3>
                 <p class="paragraph">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Dolores eos libero, rerum repudiandae odio voluptate fuga
-                  veritatis quos facilis officiis tempore cum minus ipsa
-                  consectetur mollitia, impedit consequuntur repellendus. Harum.
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Aliquam enim sequi quisquam magnam necessitatibus, expedita
+                  quas, exercitationem, deserunt reprehenderit et odit eos totam
+                  nobis ea commodi omnis dolore at iste odio beatae ipsum.
                 </p>
               </div>
             </div>
@@ -305,7 +328,15 @@
           <div class="row">
             <div class="feedback-card">
               <figure class="feedback-card__img">
-                <img src="img/feedback-2.jpg" alt="Photo of a female client" />
+                <img
+                  src="img/feedback-2.jpg"
+                  srcset="
+                    img/feedback-2.jpg       334w,
+                    img/feedback-2-small.jpg 167w
+                  "
+                  sizes="(max-width: 1240px) 20vw, (max-width: 900px) 27vw, (max-width: 600px) 30vw, 204px"
+                  alt="Photo of a female client"
+                />
                 <figcaption class="feedback-card__name">
                   Ліза Фролова
                 </figcaption>
@@ -316,9 +347,9 @@
                 </h3>
                 <p class="paragraph">
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Nesciunt consequatur corrupti numquam, doloremque et soluta
-                  non sapiente obcaecati sit iure molestias temporibus quo culpa
-                  fuga nulla eius, esse, magnam ut!
+                  Aliquam enim sequi quisquam magnam necessitatibus, expedita
+                  quas, exercitationem, deserunt reprehenderit et odit eos totam
+                  nobis ea commodi omnis dolore at iste odio beatae ipsum.
                 </p>
               </div>
             </div>
